Bug 365892 - Windows snap to the wrong position when the bottom panel is set to auto-hide
Summary: Windows snap to the wrong position when the bottom panel is set to auto-hide
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D3225
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-20 11:44 UTC by 3ndymion
Modified: 2016-11-30 12:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.4
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 3ndymion 2016-07-20 11:44:27 UTC
This bug happens when the task manager / bottom panel is set to auto-hide.  When moving any window towards the bottom of the screen, the window will snap to the position that the panel would be at if the panel was showing (not hiding).  If the panel is currently hiding, windows should not snap to the position that the panel would be at when it is open.  Or, in other words, windows should not snap to something that's not there.

Reproducible: Always

Steps to Reproduce:
1. Set panel to auto-hide.
2. Move windows toward the panel once it is hidden.
3.

Actual Results:  
Window snaps to the position that the panel was at when it was showing, even if the panel is already hiding.

Expected Results:  
Window will continue to move freely towards the edge of the screen.  Since panel is hiding, it will only snap to the edge of the screen.

Running Fedora 24 KDE.  Problem has been present ever since switch to KDE5.
Comment 1 Martin Flöser 2016-11-02 10:30:06 UTC
Git commit 3a179f32af51301d831891ce507714deb2fca952 by Martin Gräßlin.
Committed on 02/11/2016 at 10:28.
Pushed by graesslin into branch 'Plasma/5.8'.

[autotests] Add test case for snap to auto-hiding panel

Workspace::adjustClientPosition incorrectly snaps against an auto hidden
panel as the test shows.

M  +105  -7    autotests/integration/move_resize_window_test.cpp

http://commits.kde.org/kwin/3a179f32af51301d831891ce507714deb2fca952
Comment 2 Martin Flöser 2016-11-02 10:52:24 UTC
Git commit 33b583a4192f27db828ba85db1c17ecb92d5ef6d by Martin Gräßlin.
Committed on 02/11/2016 at 10:51.
Pushed by graesslin into branch 'master'.

[autotest] Test case for snap to Wayland auto-hiding panel

Like 3a179f32af51301d831891ce507714deb2fca952 but for a Wayland panel.
Added in master as auto-hide is new in master.

M  +80   -0    autotests/integration/move_resize_window_test.cpp

http://commits.kde.org/kwin/33b583a4192f27db828ba85db1c17ecb92d5ef6d
Comment 3 3ndymion 2016-11-02 11:00:29 UTC
Hi!!!  Even if it cannot be fixed, thank you very much for at least looking at this.  : )
Comment 4 Martin Flöser 2016-11-02 11:37:29 UTC
Possible patch at https://phabricator.kde.org/D3225
Comment 5 Martin Flöser 2016-11-03 07:36:02 UTC
Git commit 679e41780888b428a64389e06d7e2738904f3a98 by Martin Gräßlin.
Committed on 03/11/2016 at 07:35.
Pushed by graesslin into branch 'Plasma/5.8'.

Don't snap to auto-hidden panels

Summary:
When moving windows we don't want to snap against not visible windows
like auto-hidden panels.
FIXED-IN: 5.8.4

Test Plan: So far only auto-test, manual test will follow.

Reviewers: #kwin, #plasma

Subscribers: plasma-devel, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D3225

M  +0    -1    autotests/integration/move_resize_window_test.cpp
M  +2    -0    geometry.cpp

http://commits.kde.org/kwin/679e41780888b428a64389e06d7e2738904f3a98
Comment 6 3ndymion 2016-11-30 12:59:15 UTC
I'm trying KDE again & got this update.  It works great now.  Thank you very much!!!  :D :D :D